# agentic-sql-generator

./: .gitignore  CLAUDE.md  PRODUCT.md  README.md  plan.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  loop.py  provider.py  tools.py
backend/app/api/: ask.py  connections.py  deps.py
backend/app/db/: base.py  postgres.py  registry.py  safety.py  sqlite.py
backend/app/models/: __init__.py  api.py  events.py
backend/app/rag/: embedder.py  schema_index.py
backend/scripts/: smoke_nemotron.py
backend/tests/: conftest.py  test_agent_loop.py  test_agent_tools.py  test_api_ask.py  test_api_connections.py  test_postgres.py  test_rag.py  test_registry.py  test_safety.py  test_sqlite_adapter.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/: AskScreen.tsx  ConnectionsScreen.tsx  ResultsTable.tsx  StatusBar.tsx  TracePanel.tsx
ui/src/lib/: api.ts  events.ts  shortcuts.ts  sse.ts
